--- a/论文笔记.md
+++ b/论文笔记.md
@@ -17,11 +17,11 @@
 3. 将估计的SG和SH参数转换为高斯照明图和漫射辐照度图（参数可视化），以两幅图作为先验，用GAN生成HDR全景照明图
 4. 采用一个可微渲染层，将渲染损失也作为一个损失项监督GAN的生成
 
-![The structure of SG Regression Module](images\(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image1.png)
+![The structure of SG Regression Module](illumination-estimation-note\images\(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image1.png)
 
-![The structure of SH Regression Module](images\(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image2.png)
+![The structure of SH Regression Module](illumination-estimation-note\images\2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image2.png)
 
-![The structure of the generative network](images\(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image3.png)
+![The structure of the generative network](illumination-estimation-note\images\(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image3.png)
 
 
 
@@ -45,34 +45,10 @@
 5. 使用基于物理的逆渲染和神经网络结合，比纯基于学习的方法估计精度更高
 6. 只从场景中单个对象（物体）的着色信息估计HDR EM，不依赖场景中的内容量，不对表面反射进行假设，作为基于场景的估计方法的补充
 
-![Overview of system](images\(2020 ECCV) Object-based Illumination Estimation with Rendering-aware Neural Networks1.png)
+![Overview of system](illumination-estimation-note\images\(2020 ECCV) Object-based Illumination Estimation with Rendering-aware Neural Networks1.png)
 
 结论：
 
 1. 具有高频照明的灯光（主灯光）比低频灯光（近似环境照明）更难估计
 2. 基于场景的方法和基于对象的方法结合是一个未来的研究方向
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-**idea**
-
-1. CubeMap的粗糙度
-
-2. 知道空间中两个点的CubeMap/球面高斯，在中间做插值
 
