--- a/论文笔记.md
+++ b/论文笔记.md
@@ -19,7 +19,7 @@
 
 ![The structure of SG Regression Module](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2022%20AAAI)%20Rendering-Aware%20HDR%20Environment%20Map%20Prediction%20from%20a%20Single%20Image1.png?raw=true)
 
-![The structure of SH Regression Module](images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image2.png)
+![The structure of SH Regression Module](/images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image2.png)
 
 ![The structure of the generative network](images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image3.png)
 
