--- a/论文笔记.md
+++ b/论文笔记.md
@@ -23,6 +23,8 @@
 
 ![The structure of the generative network](images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image3.png)
 
+<img src="images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image2.png">
+
 
 
 **(2020 ECCV) Object-based Illumination Estimation with Rendering-aware Neural Networks**
