--- a/论文笔记.md
+++ b/论文笔记.md
@@ -17,15 +17,11 @@
 3. 将估计的SG和SH参数转换为高斯照明图和漫射辐照度图（参数可视化），以两幅图作为先验，用GAN生成HDR全景照明图
 4. 采用一个可微渲染层，将渲染损失也作为一个损失项监督GAN的生成
 
-![The structure of SG Regression Module](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2022%20AAAI)%20Rendering-Aware%20HDR%20Environment%20Map%20Prediction%20from%20a%20Single%20Image1.png?raw=true)
+<img src="images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image1.png" align=center />
 
-![The structure of SH Regression Module](/images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image2.png)
+<img src="images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image2.png" align=center />
 
-![The structure of the generative network](images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image3.png)
-
-<img src="images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image2.png">
-
-
+<img src="images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image3.png" align=center />
 
 **(2020 ECCV) Object-based Illumination Estimation with Rendering-aware Neural Networks**
 
@@ -47,7 +43,7 @@
 5. 使用基于物理的逆渲染和神经网络结合，比纯基于学习的方法估计精度更高
 6. 只从场景中单个对象（物体）的着色信息估计HDR EM，不依赖场景中的内容量，不对表面反射进行假设，作为基于场景的估计方法的补充
 
-![Overview of system](images/(2020 ECCV) Object-based Illumination Estimation with Rendering-aware Neural Networks1.png)
+<img src="images/(2020 ECCV) Object-based Illumination Estimation with Rendering-aware Neural Networks1.png" align=center />
 
 结论：
 
