--- a/论文笔记.md
+++ b/论文笔记.md
@@ -17,7 +17,7 @@
 3. 将估计的SG和SH参数转换为高斯照明图和漫射辐照度图（参数可视化），以两幅图作为先验，用GAN生成HDR全景照明图
 4. 采用一个可微渲染层，将渲染损失也作为一个损失项监督GAN的生成
 
-<img src="images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image1.png" align=center />
+![The structure of SG Regression Module](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2022%20AAAI)%20Rendering-Aware%20HDR%20Environment%20Map%20Prediction%20from%20a%20Single%20Image1.png)
 
 <img src="images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image2.png" align=center />
 
