--- a/论文笔记.md
+++ b/论文笔记.md
@@ -19,9 +19,9 @@
 
 ![The structure of SG Regression Module](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2022%20AAAI)%20Rendering-Aware%20HDR%20Environment%20Map%20Prediction%20from%20a%20Single%20Image1.png)
 
-<img src="images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image2.png" align=center />
+![The structure of SH Regression Module](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2022%20AAAI)%20Rendering-Aware%20HDR%20Environment%20Map%20Prediction%20from%20a%20Single%20Image2.png)
 
-<img src="images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image3.png" align=center />
+![The structure of the generative network](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2022%20AAAI)%20Rendering-Aware%20HDR%20Environment%20Map%20Prediction%20from%20a%20Single%20Image3.png)
 
 **(2020 ECCV) Object-based Illumination Estimation with Rendering-aware Neural Networks**
 
@@ -43,7 +43,7 @@
 5. 使用基于物理的逆渲染和神经网络结合，比纯基于学习的方法估计精度更高
 6. 只从场景中单个对象（物体）的着色信息估计HDR EM，不依赖场景中的内容量，不对表面反射进行假设，作为基于场景的估计方法的补充
 
-<img src="images/(2020 ECCV) Object-based Illumination Estimation with Rendering-aware Neural Networks1.png" align=center />
+![Overview of system](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2020%20ECCV)%20Object-based%20Illumination%20Estimation%20with%20Rendering-aware%20Neural%20Networks1.png)
 
 结论：
 
