--- a/论文笔记.md
+++ b/论文笔记.md
@@ -19,7 +19,11 @@
 
 ![The structure of SG Regression Module](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2022%20AAAI)%20Rendering-Aware%20HDR%20Environment%20Map%20Prediction%20from%20a%20Single%20Image1.png)
 
-![The structure of SH Regression Module](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2022%20AAAI)%20Rendering-Aware%20HDR%20Environment%20Map%20Prediction%20from%20a%20Single%20Image2.png?raw=true)
+<center>
+<img src="images/(2020 ECCV) Object-based Illumination Estimation with Rendering-aware Neural Networks1.png" alt="The structure of SG Regression Module">
+</center>
+
+![The structure of SH Regression Module](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2022%20AAAI)%20Rendering-Aware%20HDR%20Environment%20Map%20Prediction%20from%20a%20Single%20Image2.png)
 
 ![The structure of the generative network](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2022%20AAAI)%20Rendering-Aware%20HDR%20Environment%20Map%20Prediction%20from%20a%20Single%20Image3.png)
 
