--- a/论文笔记.md
+++ b/论文笔记.md
@@ -19,9 +19,9 @@
 
 ![The structure of SG Regression Module](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2022%20AAAI)%20Rendering-Aware%20HDR%20Environment%20Map%20Prediction%20from%20a%20Single%20Image1.png)
 
-<center>
+<div align=center>
 <img src="images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image2.png" alt="The structure of SH Regression Module">
-</center>
+</div>
 
 ![The structure of SH Regression Module](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2022%20AAAI)%20Rendering-Aware%20HDR%20Environment%20Map%20Prediction%20from%20a%20Single%20Image2.png)
 
