--- a/论文笔记.md
+++ b/论文笔记.md
@@ -25,6 +25,7 @@
   <img src="images/(2022 AAAI) Rendering-Aware HDR Environment Map Prediction from a Single Image3.png" alt="The structure of the generative network">
 </div>
 
+
 **(2020 ECCV) Object-based Illumination Estimation with Rendering-aware Neural Networks**
 
 问题提出：
@@ -45,7 +46,9 @@
 5. 使用基于物理的逆渲染和神经网络结合，比纯基于学习的方法估计精度更高
 6. 只从场景中单个对象（物体）的着色信息估计HDR EM，不依赖场景中的内容量，不对表面反射进行假设，作为基于场景的估计方法的补充
 
-![Overview of system](https://github.com/NiceLP/illumination-estimation-note/blob/main/images/(2020%20ECCV)%20Object-based%20Illumination%20Estimation%20with%20Rendering-aware%20Neural%20Networks1.png)
+<div align=center>
+  <img src="images/(2020 ECCV) Object-based Illumination Estimation with Rendering-aware Neural Networks1.png" alt="Overview of system">
+</div>
 
 结论：
 
